unpackaged/main/default/objects/Advisor__c/Advisor__c.object-meta.xml
<CustomObject>
    <label>Advisor</label>
    <nameField>
        <displayFormat>A - {0}</displayFormat>
        <label>Advisor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>