unpackaged/main/default/objects/Advisor__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advisors</relationshipLabel>
    <relationshipName>Advisor</relationshipName>
    <type>Lookup</type>
</CustomField>