unpackaged/main/default/objects/Advisor__c/fields/Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Fundraising__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraising</label>
    <referenceTo>Fundraising__c</referenceTo>
    <relationshipLabel>Advisors</relationshipLabel>
    <relationshipName>Advisor</relationshipName>
    <type>Lookup</type>
</CustomField>