unpackaged/main/default/objects/Advisor__c/fields/Reverse_Role__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Role__c</fullName>
    <label>Reverse Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Role__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>